--- a/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/pendingAdv.xhtml
@@ -130,9 +130,9 @@
                                 </h:outputText>
                             </p:column>
                             <f:facet name="footer">
-                                <div style="width: 100%; text-align: left;">
+                                <div style="width: 100%; text-align: left;" class="ForBtnNormal">
                                     <p:commandButton update="@form" ajax="true" value="Delete"
-                                                     actionListener="#{manageAdvisorBean.doDelete()}" styleClass="DeleteButtonR bgRed">
+                                                     actionListener="#{manageAdvisorBean.doDelete()}" styleClass="AdvNormalBtn">
                                     </p:commandButton>
                                 </div>
                             </f:facet>
