Prashant Revised 01/12/2017 - UOB + WebProfile Logic

--- a/Invessence/modules/web/src/main/webapp/demo.xhtml
+++ b/Invessence/modules/web/src/main/webapp/demo.xhtml
@@ -32,6 +32,9 @@
                             <h:graphicImage name="images/logo/uobkh.png" library="invessence"
                                             class="MarAuto MarTop5 MarBot5" style="height: 70px"/>
                         </p:commandLink>
+                        <div class="EmptyBox20"></div>
+                        <p:button  value="GetStarted" styleClass="Fs16 BlueButton" href="/getstarted.xhtml"></p:button>
+                        <p:button  value="Login" styleClass="Fs16 OrangeButton" href="/"></p:button>
                         <div class="EmptyBox50"></div>
                     </h:form>
                 </div>
