--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit2.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit2.xhtml
@@ -15,9 +15,9 @@
     </ui:define>
 
     <f:metadata>
-        <f:viewParam name="l" value="#{tdcto.beanlogonID}"/>
-        <f:viewParam name="acct" value="#{tdcto.beanacctnum}"/>
-        <f:event type="preRenderView" listener="#{tdcto.editStartCTO}"/>
+        <f:viewParam name="l" value="#{tdChngAddrs.beanlogonID}"/>
+        <f:viewParam name="acct" value="#{tdChngAddrs.beanacctnum}"/>
+        <f:event type="preRenderView" listener="#{tdChngAddrs.editStartCTO}"/>
     </f:metadata>
 
     <ui:define name="content">
@@ -119,8 +119,8 @@
 
                                     <p:commandButton value="Save and Submit"
                                                      update=":ctoForm:tdaccordian, :ctoForm:errorMsg" process="@form"
-                                                     disabled="#{tdcto.tdMasterData.optFund and tdcto.tdMasterData.recurringFlag}"
-                                                     actionListener="#{tdcto.editFunddataSave}"
+                                                     disabled="#{tdChngAddrs.tdMasterData.optFund and tdChngAddrs.tdMasterData.recurringFlag}"
+                                                     actionListener="#{tdChngAddrs.nextPageEdit}"
                                                      styleClass="Fright" >
 
                                     </p:commandButton>
