--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -127,7 +127,7 @@
                                             styleClass="Wid100 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                             style="text-align: left;"
                                             value="#{tdcto.tdMasterData.initialInvestment}" maxlength="11"
-                                            symbol="$" decimalPlaces="2" required="false"
+                                            symbol="$" placeholder="$" decimalPlaces="2" required="false"
                                             requiredMessage="Min. of $50,000 investment is required!"
                                             validatorMessage="Min. of $50,000 investment is required!">
                                     </p:inputNumber>
@@ -674,7 +674,7 @@
                                         styleClass="Wid100 invInputText input_investwid1 amountBRmobileSupport fundingRecurring"
                                         style="text-align: left;"
                                         value="#{tdcto.tdMasterData.electroicBankDetail.tranAmount}"
-                                        maxlength="11" symbol="$" decimalPlaces="2" required="false"
+                                        maxlength="11" symbol="$" placeholder="$" decimalPlaces="2" required="false"
                                         requiredMessage="Min. of $50 is required!"
                                         validatorMessage="Min. of $50 is required!">
                                 </p:inputNumber>
