--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -5,7 +5,11 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <div class="Container100 TextAlCenter">
-        <div class="EmptyBox20"></div>
+		<h3 class="StepsQuestionsFS" style="text-align: center!important; margin: 10px 0px!important;">
+			Welcome to Building Benjamins! <br />We will start by asking you a
+			set of questions - beginning with your goals, and then about your
+			attitudes towards risk.
+		</h3>
 
         <div class="TexAlCenter">
             <div class="PortfolioCreationFields">
