--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -8,9 +8,10 @@
 
     <div class="Container100 TextAlCenter">
         <div class="Container50 Responsive100 Fleft">
-            <h3 class="StepsQuestionsFS StepsQuestionsFSpg3">
-                Which of the following best reflects your objectives for this investment?
-            </h3>
+
+			<h3 class="StepsQuestionsFS StepsQuestionsFSpg3">Please select
+				an objective from the five choices below that best matches your
+				goals for this investment.</h3>
             <div class="Container100">
                 <div class="Container25 Responsive0" style="height:1px;"></div>
                 <div class="Container100 Responsive100 MarginSpaceP3 RiskQuestionBlock">
@@ -57,6 +58,10 @@
                          </div>
         <div class="Container50 Responsive100">
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
+			<div class="EmptyBox5"></div>
+			<p class="AbvportfolioCreation"><i class="fa fa-caret-right" aria-hidden="true"></i> The initial recommended strategy displayed is
+			based solely on time frame but will be refined as we gather more
+			information about your goals and risk tolerance.</p>
         </div>
 
     </div>
