--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -20,7 +20,7 @@
 							<div class="Container100 MobileModeConDash"
 								style="padding: 0 10px;">
 								<h5>Welcome,</h5>
-								<h2>#{webutil.lastFirstName}</h2>
+								<h2>#{webutil.firstName}</h2>
 							</div>
 							<div class="Container70 MobileModeConDash" style="display: none;">
 
