Checked in 01/06/2017 Ticket 209,215,273,283,173

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/activeAdv.xhtml
@@ -36,6 +36,7 @@
                         <div class="Container100">
                         <p:dataTable id="managedTable" var="managedVar" styleClass="AdvisorGridtcmLayout" widgetVar="managedTable"
                                      paginator="true" rows="10"
+                                     rowsPerPageTemplate="5,10,15"
                                      paginatorTemplate="{RowsPerPageDropdown} {FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                                      value="#{manageAdvisorBean.filteredDataList}" reflow="true">
 
