--- a/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -8,7 +8,6 @@
 <f:metadata>
     <f:event type="preRenderView" listener="#{adashbean.preRenderView}"/>
 </f:metadata>
-
 <ui:define name="content">
     <div class="layout-portlets-box">
         <!-- Messages/Alerts -->
@@ -85,7 +84,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="/pages/advisor/alist.xhtml?action=A">
+                    <a href="/pages/advisor/activeAdv.xhtml?action=A">
                         <div class="Container50">
                             <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                                 <div class="ContainerIndent">
@@ -118,7 +117,7 @@
                             </div>
                         </div>
                     </a>
-
+                    <a href="/pages/advisor/pendingAdv.xhtml?action=VA">
                     <div class="Container50">
                         <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
@@ -132,6 +131,7 @@
                             </div>
                         </div>
                     </div>
+                    </a>
                 </div>
 
             </div>
